# AppPizzeria

./: .dockerignore  .env.example  .env.production.example  .env.staging.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  wrangler.jsonc
.github/workflows/: ci.yml  promote-staging-to-production.yml
app/: __init__.py  main.py
app/api/: router.py
app/core/: config.py  dependencies.py  observability.py  security.py
app/database/: database.py  models.py
app/routers/: auth.py  ops.py  orders.py  payments.py  print_agent.py  products.py  reports.py  restaurant.py
app/schemas/: opening_hours.py  order.py  payment.py  printing.py  product.py  report.py  restaurant.py  user.py
app/services/: auth_service.py  email_service.py  file_service.py  order_service.py  printing_service.py  (+5 more)
frontend/: admin.html  index.html
frontend-react/: README.md  package-lock.json  package.json
migrations/: README.md  env.py
print_agent/: agent.py
scripts/: install_all_in_one.sh  pg_backup.sh  pg_restore.sh  run_all.sh  run_local.sh  share_demo.sh  smoke_railway.sh  start_production.sh  stop_all.sh  validate_env.sh  validate_predeploy.py
tests/: __init__.py  conftest.py  test_app_startup.py  test_auth.py  test_database.py  test_email_service.py  test_integration_pizzeria_flow.py  test_observability.py  test_opening_hours.py  test_order_status_email_notifications.py  test_order_status_events.py  test_orders.py  test_payments.py  test_print_agent.py  test_products.py  test_reports.py  test_restaurant_settings.py  test_roles.py  test_security_guards.py
(+57 files in other folders)
