[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pizzeria-app"
version = "0.1.0"
description = "FastAPI backend for the pizzeria app."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.1",
    "passlib==1.7.4",
    "pydantic==2.12.5",
    "email-validator>=2.2.0,<3.0.0",
    "python-dotenv==1.2.2",
    "python-jose==3.5.0",
    "python-multipart==0.0.24",
    "SQLAlchemy==2.0.48",
    "stripe==14.4.1",
    "uvicorn==0.41.0",
    "alembic>=1.13,<2.0",
    "psycopg2-binary>=2.9,<3.0",
    "slowapi==0.1.9",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
    "ruff>=0.11,<1.0",
]
prod = [
    "alembic>=1.13,<2.0",
    "psycopg2-binary>=2.9,<3.0",
]

[project.scripts]
pizzeria-api = "app.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["static/**/*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
